# Ros2Attempt

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: my_robot.launch.py  simple_robot.launch.py  spawn_robot.launch.py
model/: simple_robot.xacro
models/my_robot/: model.config  model.sdf
src/: my_robot_controller.cpp
worlds/: empty_world.sdf  simple_world.sdf
