cmake_minimum_required(VERSION 3.8)
project(simple_robot)

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(ros_gz REQUIRED)
find_package(rclcpp REQUIRED)

install(
  DIRECTORY model launch worlds
  DESTINATION share/${PROJECT_NAME}
)

ament_package()