<?xml version="1.0"?>
<package format="3">
  <name>simple_robot</name>
  <version>0.0.1</version>
  <description>Simple ROS2-Gazebo robot example</description>

  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>